Minor profile updates.

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -26,20 +26,10 @@
                 <label for="last-name">Last Name</label>
                 <input id="last-name" type="text" required />
             </div>
-            <!-- Alias -->
-            <div class="profile-info">
-                <label for="alias">Alias</label>
-                <input id="alias" type="text" required />
-            </div>
             <!-- Email -->
             <div class="profile-info">
                 <label for="email">Email</label>
                 <input id="email" type="email" required />
-            </div>
-            <!-- Gender -->
-            <div class="profile-info">
-                <label for="gender">How do you gender identify?</label>
-                <input id="gender" type="text" />
             </div>
             <!-- DOB -->
             <div class="profile-info">
@@ -59,6 +49,7 @@
 
             <div class="buttons">
                 <button  id="update-button" class="btn btn-primary" type="submit">Save</button>
+                <a href="./profile.html" class="btn">Cancel</a>
             </div>
         </form>
     </div>
