Added more code for family member CRUD.

--- a/family-member-details.html
+++ b/family-member-details.html
@@ -15,65 +15,21 @@
     </header>
     <div class="container">
         <section id="story-details">
-            <h1 class="title">Story</h1>
-            <!-- Title -->
+            <h1 class="title">Family Member</h1>
+            <!-- First Name -->
             <div>
-                <label for="title">Title: </label>
-                <span id="title"></span>
+                <label for="firstName">First Name: </label>
+                <span id="first-name"></span>
             </div>
-            <!-- Text -->
+            <!-- Last Name -->
             <div>
-                <label for="text">Text: </label>
-                <div id="text"></div>
+                <label for="lastName">Last Name: </label>
+                <span id="last-name"></span>
             </div>
-            <!-- Lat -->
+            <!-- DOB -->
             <div>
-                <label for="lat">Lat: </label>
-                <span id="lat">12.4</span>
-            </div>
-            <!-- Long -->
-            <div>
-                <label for="long">Lat: </label>
-                <span id="long">12.4</span>
-            </div>
-            <!-- Address 1 -->
-            <div>
-                <label for="address1">Address 1: </label>
-                <span id="address1"></span>
-            </div>
-            <!-- Address 2 -->
-            <div>
-                <label for="address2">Address 2: </label>
-                <span id="address2"></span>
-            </div>
-            <!-- City -->
-            <div>
-                <label for="city">City: </label>
-                <span id="city"></span>
-            </div>
-            <!-- State -->
-            <div>
-                <label for="state">State: </label>
-                <span id="state"></span>
-            </div>
-            <!-- Zip -->
-            <div>
-                <label for="zip">Zip: </label>
-                <span id="zip"></span>
-            </div>
-            <!-- Country -->
-            <div>
-                <label for="country">Country: </label>
-                <span id="country"></span>
-            </div>
-            <!-- Date/Time -->
-            <div>
-                <label for="date-time">Date/Time: </label>
-                <span id="date-time"></span>
-            </div>
-            <!-- Published -->
-            <div>
-                <span id="published">Published</span>
+                <label for="DOB">Date of Birth</label>
+                <span id="dob"></span>
             </div>
             <div class="buttons">
                 <a class="btn btn-primary" id="edit-button">Edit</a>
@@ -85,8 +41,8 @@
         <iframe class="footer" src="footer.html" width="100%"></iframe>
     </footer>
 
-    <script src="./src/stories.js"></script>
-    <script src="./src/story-details.js"></script>
+    <script src="./src/family-members.js"></script>
+    <script src="./src/family-member-details.js"></script>
 </body>
 
 </html>
